changes to prevent lost of work on Yuriy's laptop (due to failed hardware)